# aoc

./: .gitignore  pyproject.toml
src/aoc/: __init__.py  __main__.py  base.py
src/aoc/Y2015/: __init__.py
src/aoc/Y2015/D01/: __init__.py  main.py  test_01.py
src/aoc/Y2023/: __init__.py
src/aoc/Y2023/D01/: __init__.py  main.py  test_01.py
src/aoc/Y2023/D02/: __init__.py  main.py  test_02.py
src/aoc/Y2024/: __init__.py
src/aoc/Y2024/D01/: __init__.py  main.py  test_01.py
src/aoc/Y2024/D02/: __init__.py  main.py  test_02.py
src/aoc/Y2024/D03/: 03a.out  03b.out  __init__.py  main.py  test_03.py
src/aoc/Y2024/D04/: __init__.py  main.py  test_04.py
src/aoc/Y2024/D05/: __init__.py  main.py  test_05.py
src/aoc/Y2024/D06/: __init__.py  main.py  test_06.py
src/aoc/Y2024/D07/: __init__.py  main.py  test_07.py
src/aoc/Y2024/D09/: __init__.py  main.py  test_09.py
src/aoc/Y2025/: __init__.py
src/aoc/Y2025/D01/: __init__.py  main.py  test_01.py
src/aoc/utils/: test.py
