[project]
name = "aoc"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

dependencies = [
    "advent-of-code-data>=2.1.0",
    "rich~=13.9.4",
    "typer~=0.15.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "browser-cookie3>=0.19.1",
    "pytest>=8.3.4",
    "ruff>=0.14.7",
]

[project.entry-points]
"adventofcode.user" = { lishaduck = "aoc.__main__:solve" }

[project.scripts]
advent = "aoc.__main__:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.13,<0.10.0"]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
preview = true
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "CPY001",
    "D",
    "DOC",
    "E203",
    "E501",
    "INP001",
    "PLR2004", # temporary
    "S101",
    "S311",
    "T201",
    "TD002",
    "TD003",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
xfail_strict = true
